[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/ships/ScrollEnvironment.tres" type="Environment" id=1]
[ext_resource path="res://ui/ships/ItemPanel.gd" type="Script" id=2]

[sub_resource type="World" id=1]
environment = ExtResource( 1 )

[node name="ItemPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
ship_border = 0.05

[node name="All" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="GridContainer" parent="All"]
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="View" type="ViewportContainer" parent="All/Top"]
margin_right = 1008.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Port" type="Viewport" parent="All/Top/View"]
size = Vector2( 1008, 576 )
own_world = true
world = SubResource( 1 )
handle_input_locally = false
render_target_update_mode = 3

[node name="SelectFront" type="OmniLight" parent="All/Top/View/Port"]
transform = Transform( 0.707103, 1.40071e-06, -0.70711, 0.353558, 0.866022, 0.353557, 0.612374, -0.500006, 0.612367, -1000, 50, 1000 )
layers = 16
light_energy = 3.0
light_cull_mask = 4293918736
omni_range = 4096.0
omni_attenuation = 0.0206173

[node name="SelectBack" type="OmniLight" parent="All/Top/View/Port"]
transform = Transform( -0.841503, 0.12941, 0.524524, 0.353558, 0.866022, 0.353557, -0.408496, 0.482969, -0.774514, 200, 1000, -200 )
layers = 16
light_energy = 3.0
light_cull_mask = 4293918736
omni_range = 4096.0
omni_attenuation = 0.0236831

[node name="Sun" type="DirectionalLight" parent="All/Top/View/Port"]
transform = Transform( 0.707107, 0, -0.707107, 0.353553, 0.866025, 0.353553, 0.612372, -0.5, 0.612372, 0, 0, 0 )
light_cull_mask = 4293918721

[node name="Camera" type="Camera" parent="All/Top/View/Port"]
transform = Transform( -1.62921e-07, 1, 1.62921e-07, 0, -1.62921e-07, 1, 1, 1.62921e-07, 2.65431e-14, 0, 50, 0 )
cull_mask = 17
projection = 1
size = 5.0

[node name="Items" type="Spatial" parent="All/Top/View/Port"]

[node name="Scroll" type="VScrollBar" parent="All/Top"]
margin_left = 1012.0
margin_right = 1024.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="GridContainer" parent="All"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
columns = 5

[node name="Add" type="Button" parent="All/Buttons"]
margin_right = 37.0
margin_bottom = 20.0
text = "Add"

[node name="Change" type="Button" parent="All/Buttons"]
margin_left = 41.0
margin_right = 99.0
margin_bottom = 20.0
text = "Update"

[node name="Remove" type="Button" parent="All/Buttons"]
margin_left = 103.0
margin_right = 167.0
margin_bottom = 20.0
text = "Remove"

[node name="ScaleLabel" type="Label" parent="All/Buttons"]
margin_left = 171.0
margin_top = 3.0
margin_right = 204.0
margin_bottom = 17.0
text = "Scale"

[node name="Zoom" type="HScrollBar" parent="All/Buttons"]
margin_left = 208.0
margin_right = 1024.0
margin_bottom = 20.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 3.0
max_value = 14.0
page = 1.0
value = 5.0
[connection signal="visibility_changed" from="." to="." method="_on_ItemPanel_visibility_changed"]
[connection signal="resized" from="All/Top/View" to="." method="_on_View_resized"]
[connection signal="value_changed" from="All/Top/Scroll" to="." method="_on_Scroll_value_changed"]
[connection signal="value_changed" from="All/Buttons/Zoom" to="." method="_on_Zoom_value_changed"]
